[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scp/bdy/enemies/Enemie1.gd" type="Script" id=1]
[ext_resource path="res://assets/art/bdy/Enemies/Enemie1/00-0.png" type="Texture" id=2]
[ext_resource path="res://assets/art/bdy/Enemies/Enemie1/01-1.png" type="Texture" id=3]
[ext_resource path="res://assets/art/bdy/Enemies/Enemie1/01-0.png" type="Texture" id=4]
[ext_resource path="res://assets/art/other/light00.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 14.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.176471 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.992157, 0.992157, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.176471 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0117647 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[node name="enemie1OW" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( -0.5, -8 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 6, -1, 9, 3, 8, 8, 6, 3, 3, 8, 1, 4, -1, 8, -4, 3, -6, 8, -7, 3, -4, -1, -1, 0, -2, -2, -2, -7, -1, -8, 3, -8, 4, -7, 4, -2, 3, 0 )

[node name="detectorl" type="Area2D" parent="."]
position = Vector2( -2, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="detectorl"]
polygon = PoolVector2Array( -9, -3, -38, -3, -38, -5, -14, -8, 2, -13, -9, -8 )

[node name="detectorr" type="Area2D" parent="."]
position = Vector2( 4, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="detectorr"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 8, -3, 8, -8, -3, -13, 13, -8, 38, -5, 38, -3 )

[node name="pdetectorl" type="Area2D" parent="."]
position = Vector2( -4, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="pdetectorl"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( -4, 8, -4, -8, 5, -12, -5, -8, -5, 8 )

[node name="pdetectorr" type="Area2D" parent="."]
position = Vector2( 5, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="pdetectorr"]
position = Vector2( -1, 11 )
polygon = PoolVector2Array( 5, -3, 5, -19, -4, -23, 6, -19, 6, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/die = SubResource( 4 )
anims/dissapier = SubResource( 5 )
anims/still = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 4, -4 )
texture = ExtResource( 5 )
color = Color( 1, 0, 0, 1 )
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="detectorl" to="." method="_on_detectorl_body_entered"]
[connection signal="body_entered" from="detectorr" to="." method="_on_detectorr_body_entered"]
[connection signal="body_entered" from="pdetectorl" to="." method="_on_pdetectorl_body_entered"]
[connection signal="body_entered" from="pdetectorr" to="." method="_on_pdetectorr_body_entered"]
